<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">A2 Luxe</string>
    <string name="str_a2">A2</string>
    <string name="str_sin_up">Sin Up</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_username">Username</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_already_have_account">Already have account?</string>
    <string name="str_Sign_up">Sign Up</string>
    <string name="str_owner">Owner</string>
    <string name="str_user">User</string>
    <string name="str_select_your_role">Select Your Role</string>
    <string name="str_next">Next</string>
    <string name="default_web_client_id">104870116826-kb6gooabcr9hqr925687rrvtr2ufu14k.apps.googleusercontent.com</string>
    <string name="str__92xxxxxxxxxx">+92xxxxxxxxxx</string>
    <string name="str_send_code">Send Code</string>
    <string name="str_enter_your_phone_no_to_send_one_time_password">Enter Your Phone No to send one time password</string>
    <string name="str_otp_verification">OTP Verification</string>
    <string name="str_verification_code">Verification Code</string>
    <string name="str_we_have_send_a_verification_code_to_your_phone_no">We have send a verification code to your Phone no</string>
    <string name="str_enter_otp">Enter OTP</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_a2_luxe">A2 luxe</string>
    <string name="str_sign_in">Sign in</string>
    <string name="str_sign_Up">Sign Up</string>
    <string name="str_sign_In">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_a2_lux">A2 Luxe</string>
    <string name="str_confirm_exit">Confirm Exit</string>
    <string name="str_are_you_sure_you_want_to_exit_all_data_will_be_lost">Are You sure you want to exit. All data will be lost</string>
    <string name="str_logout">Logout</string>
    <string name="str_open_camera">Open Camera</string>
    <string name="str_open_gallery">Open Gallery</string>
    <string name="str_enter_title_of_item">Enter title of item</string>
    <string name="str_enter_rating_of_item">Enter Rating of Item</string>
    <string name="str_enter_a_prize_of_item">Enter a prize of item</string>
    <string name="str_select_item_category">Select Item Category</string>
    <string name="str_add_item">Add Item</string>
    <string name="str_search">Search</string>
    <string name="str_all">All</string>
    <string name="str_women">Women</string>
    <string name="str_men">Men</string>
    <string name="str_children">Children</string>
    <string name="str_no_item_found">No Item Found</string>
    <string name="str_title">Title</string>
    <string name="str_category">Category</string>
    <string name="str">$</string>
    <string name="str__32_66">32.66</string>
    <string name="str_rating">rating</string>
    <string name="str_all_item">All item</string>
    <string name="str_add_to_cart">🛒 Add to Cart | $</string>
    <string name="str_xl">XL</string>
    <string name="str_Add_to_cart">🛒 Add to Cart | $</string>
    <string name="str__1">1</string>
    <string name="str_s">S</string>
    <string name="str_m">M</string>
    <string name="str_l">L</string>
    <string name="str_my_wishlist">My Wishlist</string>
    <string name="str_help_center">Help Center</string>
    <string name="str_customer_service">Customer Service</string>
    <string name="str_whatsapp">WhatsApp</string>
    <string name="str_website">Website</string>
    <string name="str_instagram">Instagram</string>
    <string name="str_my_orders">My Orders</string>
    <string name="str_complete_your_profile">Complete Your Profile</string>
    <string name="str_dont_worry_only_you_can_see_your_personal">Dont worry, only you can see your personal</string>
    <string name="str_data_no_one_else_will_be_able_to_see_it">data. No one else will be able to see it.</string>
    <string name="str_name">Name</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_address">Address</string>
    <string name="str_complete_profile">Complete Profile</string>
    <string name="str_add_your_item">Add Your Item</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_cancellation_policy">Cancellation Policy</string>
    <string name="str_orders_can_be_cancelled_within_24_hours_of_purchase_once_the_order_is_shipped_cancellation_is_not_possible_refunds_will_be_processed_within_5_7_business_days_after_approval">Orders can be cancelled within 24 hours of purchase. Once the order is shipped, cancellation is not possible. Refunds will be processed within 5-7 business days after approval.</string>
    <string name="str_terms_and_conditions">Terms and Conditions</string>
    <string name="str_by_using_this_application_you_agree_to_abide_by_our_policies_products_are_subject_to_availability_prices_may_change_without_prior_notice_misuse_of_the_app_may_result_in_account_suspension">By using this application, you agree to abide by our policies. Products are subject to availability. Prices may change without prior notice. Misuse of the app may result in account suspension.</string>
    <string name="str_settings">Settings</string>
    <string name="str_comming_soon">Comming Soon</string>
    <string name="todo">TODO</string>
    <string name="str_find_your">Find Your</string>
    <string name="str_best_style">Best Style</string>
    <string name="str_find_and_discover_the_best_style">Find and discover the best style</string>
    <string name="str_according_to_your_passion">according to your passion</string>
    <string name="str_user_name">User name</string>
    <string name="str_Email">Email</string>
    <string name="str_checkout">Checkout</string>
    <string name="str_subtotal">Subtotal</string>
    <string name="str__19_00">19.00</string>
    <string name="str_shipping">Shipping</string>
    <string name="str__19">19</string>
    <string name="str_total">Total</string>
    <string name="str__192">19</string>
    <string name="str_Checkout">Checkout</string>
    <string name="str_light_dress_bless">Light Dress Bless</string>
    <string name="str_star">⭐</string>
    <string name="str__5_0">5.0</string>
    <string name="str_its_simple_and_elegant_shape_makes_it_perfect_for_those_of_you_who_like_minimalist_clothes">Its simple and elegant shape makes it perfect for those of you who like minimalist clothes</string>
    <string name="str_choose_size">Choose Size</string>
    <string name="str_color">Color</string>
    <string name="str_hello_welcome">Hello, Welcome 👋</string>
    <string name="str_albert_steveno">Albert Steveno</string>
    <string name="str_Category">Category</string>
    <string name="str_profile">Profile</string>
    <string name="str_Name">Name</string>
    <string name="str_my_profile">My Profile</string>
    <string name="str_mY_orders">My Orders</string>
    <string name="str_Settings">Settings</string>
    <string name="str_Help_center">Help Center</string>
    <string name="str_Privacy_policy">Privacy Policy</string>
    <string name="str_Logout">Logout</string>
    <string name="str_modern_light_clothes">Modern light clothes</string>
    <string name="str_dress_modern">Dress modern</string>
    <string name="str__212_99">$212.99</string>
    <string name="str__4">4</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_retry">Retry</string>

</resources>