<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_18sdp"
    android:layout_marginEnd="@dimen/_18sdp"
    android:gravity="center"
    android:background="@color/White"
    tools:context=".activity.PhoneAuthActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_otp_verification"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/Black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8ssp"
        android:textSize="@dimen/_12ssp"
        android:text="@string/str_enter_your_phone_no_to_send_one_time_password"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str__92xxxxxxxxxx"
        android:background="@drawable/custum_rounded"
        android:layout_marginTop="@dimen/_18sdp"
        android:inputType="phone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custum_rounded"
        android:backgroundTint="@color/Black"
        android:textColor="@color/White"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/str_send_code"/>

</LinearLayout>