<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:attr/windowBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.CartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp"
        android:orientation="horizontal">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/custom_rounded_nav"
        android:src="@drawable/ic_arrow_back"
        app:tint="@color/onBackground"

        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_73sdp"
            android:textStyle="bold"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/_16sdp"
            android:text="@string/str_checkout" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_progress"
        android:progressTint="@color/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_180sdp" />

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_165sdp"
        android:text="@string/str_no_item_found"
        android:textColor="@color/DustyGray"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone"
         />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_320sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_16sdp"
        app:cardCornerRadius="@dimen/_12ssp">


        <LinearLayout
            android:id="@+id/ll_total"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/_30sdp"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_subtotal"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="match_parent"
                    android:text="@string/str_subtotal"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/onBackground"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_subtotal_rate"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/str__19_00"
                    android:textColor="@color/onBackground"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_shipping"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="match_parent"
                    android:text="@string/str_shipping"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/tv_shipping_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/str__19"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/str_total"
                    android:textColor="@color/onBackground"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_total_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/str__192"
                    android:textColor="@color/onBackground"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:textColor="@color/White"
                android:backgroundTint="@color/Black"
                android:text="@string/str_Checkout" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>