<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity = "center"
    android:background="?android:attr/windowBackground"
    tools:context=".activity.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_item1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_300sdp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/img_model"
            app:shapeAppearanceOverlay="@style/RoundedBottomAppBarShape" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/str_find_your"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_best_style"
            android:textColor="@color/onBackground"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:textColor="@color/onBackground"
            android:text="@string/str_find_and_discover_the_best_style"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/onBackground"
            android:text="@string/str_according_to_your_passion"
            android:textSize="@dimen/_12sdp" />


        <Button
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:backgroundTint="@color/onBackground"
            android:textColor="@color/background"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/str_retry"/>

        <ProgressBar
            android:id="@+id/pb_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_gravity="center_horizontal"
             />


        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/blacklisted"
            android:gravity="center"
            android:textColor="@color/onBackground"
            android:text="@string/str_a2_luxe"
            android:textSize="@dimen/_20sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>