<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_sin_in"
    tools:context=".activity.SinUpActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Black"
        android:background="@drawable/ic_arrow_back"/>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_18sdp"
        app:cardElevation="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_12ssp"
        android:layout_gravity="bottom"
        app:cardBackgroundColor="@color/ChineseSilver"
        android:alpha="0.81">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_18sdp"
            android:textSize="@dimen/_30sdp"
            android:fontFamily="@font/blacklisted"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:text="@string/str_a2"/>

            <TextView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:text="@string/str_sign_Up"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="@dimen/_255sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:textSize="@dimen/_12sdp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:background="@drawable/custum_rounded"
                android:hint="@string/str_email"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="@dimen/_255sdp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:imeOptions="actionNext"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/custum_rounded"
                android:hint="@string/str_password"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="@dimen/_255sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/custum_rounded"
                android:hint="@string/str_username"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/_255sdp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_sign_up"
                android:backgroundTint="@color/Black"
                android:textColor="@color/White"
                android:textSize="@dimen/_12sdp"
                android:text="@string/str_Sign_up"
                android:background="@drawable/custum_rounded"
                android:layout_marginTop="@dimen/_6sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_google"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/img_google"/>

                <ImageView
                    android:id="@+id/iv_phone"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:background="@drawable/img_telephone"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pb_progress"
                android:progressTint="@color/Black"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                 />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_5ssp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_already_have_account" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sign_in"
                android:layout_marginStart="@dimen/_2ssp"
                android:textColor="@color/Blue"
                />

        </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>