<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_12sdp"
    android:layout_marginBottom="@dimen/_8sdp"
    android:layout_marginEnd="@dimen/_8sdp"
    app:cardElevation="@dimen/_6sdp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/img_demo"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="@color/onBackground"
            android:text="@string/str_title"
            android:layout_marginStart="@dimen/_4ssp"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4ssp"
            android:text="@string/str_category"
            android:visibility="gone"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="@dimen/_4ssp"
            tools:ignore="ExtraText">

            <TextView
                android:id="@+id/tv_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str"
                android:textColor="@color/onBackground"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str__32_66"
                android:textColor="@color/onBackground"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star"
                android:layout_marginStart="@dimen/_40sdp"
                tools:ignore="ImageContrastCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/tv_Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rating"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                android:textColor="@color/onBackground"
                android:layout_marginStart="@dimen/_4sdp" />

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_heart"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_margin="@dimen/_12sdp"
        android:src="@drawable/ic_fav"
        android:backgroundTint="@color/Black"
        android:layout_gravity="end"
        app:tint="@color/White"
        android:background="@drawable/custom_rounded_nav"
        />
</androidx.cardview.widget.CardView>
